--- a/website-diegocrescini/css/style.css
+++ b/website-diegocrescini/css/style.css
@@ -20,17 +20,29 @@ html {
 
 .container {
     display: block;
+    margin: 0 auto;
     width: 90%;
+    border: solid 1px  #0ff; /* Visualization border*/
 }
+
+@media (min-width: 768px) {
+    .container {
+      display: block;
+      width: 75%;
+    }
+  }
+@media (min-width: 1200px) {
+    .container {
+      display: block;
+      width: 55%;
+    }
+  }
+  
 
 a {
     text-decoration: none;
     list-style-type: none;
     color: unset; /*THIS NEEDS MODIFICATION AFTER CHOSING PALETTE*/
-}
-
-@media (min-width: 768px) {
-     
 }
 
 /********************Type and text********************/
@@ -66,21 +78,26 @@ header h3 {
 
 .navbar {
     height: 2rem;
+    display: flex;
+    flex-direction: column;
 }
 
 .navbar ul{
+    height: 100%;
     display: flex;
     justify-content: space-around; 
-    height: inherit;
+    align-items: center;   
+    
 }
 .navbar ul li {
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     
 }
 .navbar ul li, .navbar ul li a {
-    height: 100%;
+    
     
 }
 
@@ -125,23 +142,18 @@ header h3 {
 
 
 /********************PROJECTS********************/
-#projects .project-tile{
+.projects-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.project-tile {
     margin: .5rem;
 }
-#projects h2, p {
-    text-align: center;
-}
-.about-projects h2, .about-projects p {
-    text-align: right;
-}
-.project-tile img {
-    max-width: 95%;
-    
-}
-.project-tile p {
-    background-color: green;    /* remove this line after placing actual projects */
-    width: 100%;                  /* remove this line after placing actual projects */
-    height: 240px;                /* remove this line after placing actual projects */
-    margin: .5rem 0rem 1rem;
-    text-align: center;
-}
+ 
+@media (min-width: 768px) {
+    .project-tile {
+        max-width: 40%;
+    }   
+} 
+
