--- a/website-diegocrescini/css/style.css
+++ b/website-diegocrescini/css/style.css
@@ -18,11 +18,14 @@ html {
 
 /********************General********************/
 
+body {
+    background-color: #000;
+}
 .container {
     display: block;
     margin: 0 auto;
     width: 90%;
-    border: solid 1px  #0ff; /* Visualization border*/
+    border: solid 1px  #000; /* Visualization border*/
 }
 
 @media (min-width: 768px) {
@@ -37,8 +40,6 @@ html {
       width: 55%;
     }
   }
-  
-
 a {
     text-decoration: none;
     list-style-type: none;
@@ -51,33 +52,54 @@ h1, h2, h3, .uppercase {
     text-transform: uppercase;
 }
 h1, h2, h3, p, a {
-    font-family: Arial, Helvetica, sans-serif
+    font-family: Helvetica, Arial, sans-serif;
+    color: #f3f0e1;
 }
-h2, h3 {
+h1, h2, h3 {
     margin: .5rem 0;
 }
 
 /********************Header & nav********************/
 
 header {
-    height: 8rem;
+    height: 6rem;
     width: 100%;
+    margin-top: 0;
+    position: fixed;
+    background-color:#000;
+    border-bottom: 1px solid #f3f0e1;
+}
+header h1, header a {
+    
+}
+
+header nav {
+    height: 100%;
+    width: 90%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+nav .contact {
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    margin-top: 0;
-    position: fixed;
-    background-color: rgb(200, 200, 200);
+    list-style-type: none;
 }
 
-header h3 {
+header h1 {
     font-size: 1.6rem;
     text-align: center;
-    padding-top: 1rem;
+    
+}
+header .contact {
+    
 }
 
 .navbar {
-    height: 2rem;
+    /* height: 2rem; */
     display: flex;
     flex-direction: column;
 }
@@ -142,13 +164,24 @@ header h3 {
 
 
 /********************PROJECTS********************/
+#projects {
+    padding: 2rem;
+}
+#projects h2 {
+    text-align: center;
+}
 .projects-container {
     display: flex;
     flex-wrap: wrap;
+    
 }
 
 .project-tile {
-    margin: .5rem;
+    display: inline;
+    border: 1px solid #000;
+    width: 40%;
+    height: 40%;
+    margin: 0 auto;
 }
  
 @media (min-width: 768px) {
