--- a/website-diegocrescini/css/style.css
+++ b/website-diegocrescini/css/style.css
@@ -1,5 +1,5 @@
 :root {
-    --black: #333;
+    --black: #222;
     --medium: #888;
     --white: #eee;
     --green: rgb(76, 199, 189);
@@ -40,7 +40,7 @@ body {
     }
 }
 a {
-    padding: .6rem;
+    padding: 1rem;
     text-decoration: none;
     list-style-type: none;
     color: unset; /*THIS NEEDS MODIFICATION AFTER CHOSING PALETTE*/
@@ -57,17 +57,15 @@ nav a, h1 a {
 h1 a {
     font-weight: 600;
     font-size: 2.5rem;
+    
+    
 } 
-#logo {
-    padding: .5rem;
-}
-
 
 /*Various*/
 h1, h3, .uppercase {
     text-transform: uppercase;
 }
-h2, h3 {
+h2, h3, h4 {
     color: var(--green);
     font-family: var(--montserrat);
     font-weight: 600;
@@ -83,10 +81,11 @@ h2, h3 {
 /********************Header & nav********************/
 
 header {
-    height: 6rem;
+    height: 8rem;
     width: 100%;
-    margin-top: 0;
+    padding-top: 1rem;
     position: fixed;
+    background-color: var(--black);
     border-bottom: 2px solid var(--green);
     /*visualization border*/
     /* outline: 1px solid green; */
@@ -94,6 +93,7 @@ header {
 
 header nav {
     width: 100%;
+    height: 100%;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
@@ -111,6 +111,7 @@ nav .menu {
     display: flex;
     margin: 0 auto;
     justify-content: space-around;
+    align-items: flex-end;
     list-style-type: none;
 }
 
@@ -118,7 +119,6 @@ nav .menu {
     font-weight: 600;
 }
 .menu li a:hover {
-    border-bottom: 3px solid var(--green);
     background-color: var(--green);
     
 } 
@@ -127,8 +127,18 @@ nav .menu {
 
 
 /********************Welcome********************/
-main{
+#welcome-section {
+    display: flex;
+    flex-direction: column;
+}
+.welcome-section__img{
+    margin: 0 auto;
+    text-align: center;
+}
+.welcome-section__img img{
     
+    border-radius: 50%;
+    height: 75%;
 }
 
 /********************Welcome********************/
@@ -137,7 +147,7 @@ main{
 #welcome-section {
     height: calc(100vh - 1rem);
     width: 95%;
-    padding-top: 6rem; /*same as header height*/
+    padding-top: 8rem; /*same as header height*/
     display: flex;
     flex-direction: column;
     
@@ -176,6 +186,7 @@ main{
 }
 .projects-container {
     display: flex;
+    flex-direction: column;
     flex-wrap: wrap;
     
 }
@@ -183,14 +194,14 @@ main{
 .project-tile {
     display: inline;
     border: 1px solid #000;
-    width: 40%;
-    height: 40%;
+    /* width: 40%;
+    height: 40%; */
     margin: 0 auto;
 }
  
-@media (min-width: 768px) {
+/* @media (min-width: 768px) {
     .project-tile {
         max-width: 40%;
     }   
 } 
-
+ */
